added personal details

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TechForward Solutions | Leading Technology Services Company</title>
+    <title>Veltron AI | Leading AI & Technology Company</title>
     <meta name="description" content="Professional technology consulting, software development, and digital transformation services. Transform your business with cutting-edge solutions." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
