--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Veltron AI" />
 
-    <meta property="og:title" content="c4f85814-85a7-40ee-a7a3-16f697a6eaab" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Veltron AI | Leading AI & Technology Company" />
+    <meta property="og:description" content="Professional technology consulting, software development, and digital transformation services. Transform your business with cutting-edge solutions." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@veltronai" />
+    <meta name="twitter:image" content="/placeholder.svg" />
   </head>
 
   <body>
